--- a/package.json
+++ b/package.json
@@ -6,10 +6,25 @@
   "scripts": {
     "dev": "netlify dev",
     "build": "echo 'No build step required for static site'",
-    "test": "echo 'Running tests...' && node test/form-validation.test.js",
+    "test": "jest --verbose --coverage",
+    "test:watch": "jest --watch --verbose",
+    "test:unit": "jest --testPathPattern=unit --verbose",
+    "test:integration": "jest --testPathPattern=integration --verbose",
+    "test:e2e": "jest --testPathPattern=e2e --verbose",
+    "test:api": "jest --testPathPattern=api --verbose",
+    "test:security": "jest --testPathPattern=security --verbose",
+    "test:performance": "jest --testPathPattern=performance --verbose",
+    "test:ci": "jest --ci --coverage --watchAll=false",
     "deploy": "netlify deploy --prod",
     "functions:dev": "netlify functions:serve",
-    "lint": "eslint netlify/functions/*.js",
+    "lint": "eslint . --ext .js",
+    "lint:fix": "eslint . --ext .js --fix",
+    "format": "prettier --write .",
+    "validate": "npm run lint && npm run test:ci",
+    "coverage": "jest --coverage --coverageReporters=text-lcov | coveralls",
+    "docs": "jsdoc -c jsdoc.conf.json",
+    "migrate": "node database/migrations/run-migrations.js",
+    "seed": "node database/seeds/run-seeds.js",
     "start": "python3 -m http.server 8000"
   },
   "dependencies": {
@@ -23,7 +38,20 @@
   },
   "devDependencies": {
     "netlify-cli": "^17.10.1",
-    "eslint": "^8.55.0"
+    "eslint": "^8.55.0",
+    "@types/jest": "^29.5.8",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-jest": "^27.6.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-security": "^1.7.1",
+    "jest": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
+    "mongodb-memory-server": "^9.1.3",
+    "nodemon": "^3.0.1",
+    "prettier": "^3.1.0",
+    "supertest": "^6.3.3",
+    "jsdoc": "^4.0.2",
+    "coveralls": "^3.1.1"
   },
   "keywords": [
     "luxury",
@@ -51,5 +79,64 @@
     "functions": {
       "directory": "netlify/functions"
     }
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "setupFilesAfterEnv": ["<rootDir>/tests/setup.js"],
+    "testMatch": [
+      "<rootDir>/tests/**/*.test.js"
+    ],
+    "collectCoverageFrom": [
+      "services/**/*.js",
+      "database/**/*.js",
+      "netlify/functions/**/*.js",
+      "!**/node_modules/**",
+      "!**/coverage/**",
+      "!**/tests/**"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 80,
+        "functions": 80,
+        "lines": 80,
+        "statements": 80
+      }
+    },
+    "coverageReporters": [
+      "text",
+      "lcov",
+      "html"
+    ]
+  },
+  "eslintConfig": {
+    "env": {
+      "node": true,
+      "es2021": true,
+      "jest": true
+    },
+    "extends": [
+      "eslint:recommended",
+      "plugin:node/recommended",
+      "plugin:security/recommended",
+      "plugin:jest/recommended",
+      "prettier"
+    ],
+    "parserOptions": {
+      "ecmaVersion": 12,
+      "sourceType": "module"
+    },
+    "rules": {
+      "no-console": "warn",
+      "no-unused-vars": "error",
+      "prefer-const": "error",
+      "no-var": "error"
+    }
+  },
+  "prettier": {
+    "semi": true,
+    "trailingComma": "es5",
+    "singleQuote": true,
+    "printWidth": 100,
+    "tabWidth": 2
   }
 }
